# check-stock-price

./: .gitignore  .pre-commit-config.yaml  README.md  TESTING.ipynb  projects.txt  pyproject.toml
check_stock_price/: main.py
data/: SCHD.json  SCHG.json  SCHX.json  VOO.json
historical_stock_analysis/: SCHD_alpha_vantage_data.csv  SCHG_alpha_vantage_data.csv  SCHX_alpha_vantage_data.csv  TESTING.ipynb  main.py  stock_price_analysis.ipynb  test_down.csv
